# rockos

./: Cargo.toml  KERNEL_REMAINING.md  Makefile.toml  README.md  build.rs
.cargo/: config.toml
assets/: init.elf
scripts/: qemu_serial_test.sh
src/: elf.rs  fs.rs  gdt.rs  heap.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  paging.rs  pit.rs  process.rs  scheduler.rs  serial.rs  syscall.rs  task.rs  tty.rs  user.rs  vga.rs
userspace/init/: Cargo.toml  build.rs  link.x
userspace/init/src/: main.rs
