[package]
name = "rockos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rockos"
test = false
bench = false

[dependencies]
# 0.11 is not usable as a kernel dep on x86_64-unknown-none; bootimage 0.10 targets the 0.9 API.
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
linked_list_allocator = "0.10"
spin = "0.9"
x86_64 = "0.14"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Used by `bootimage runner` when you `cargo run` — keep in sync with Makefile.toml.
[package.metadata.bootimage]
# Keep in sync with Makefile.toml [tasks.qemu]. args
# -no-reboot: triple fault exits QEMU instead of rebooting into a confusing loop.
# -d …: log interrupts / guest errors / CPU reset to stderr (see why the guest resets).
# More: run `qemu-system-x86_64 -trace help` and add e.g. `-trace events=…` for event traces.
run-args = [
    "-serial", "stdio",
    "-vga", "std",
    "-no-reboot",
    "-d", "int,guest_errors,cpu_reset",
]

[package.metadata.cargo-make]
run = "qemu-system-x86_64 -drive format=raw,file=target/x86_64-unknown-none/debug/bootimage-rockos.bin -serial stdio -vga std -no-reboot -d int,guest_errors,cpu_reset"
