[package]
name = "rockos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rockos"
test = false
bench = false

[dependencies]
# 0.11 is not usable as a kernel dep on x86_64-unknown-none; bootimage 0.10 targets the 0.9 API.
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
linked_list_allocator = "0.10"
spin = "0.9"
x86_64 = "0.14"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Used by `bootimage runner` when you `cargo run` — keep in sync with Makefile.toml.
[package.metadata.bootimage]
# Keep in sync with Makefile.toml [tasks.qemu]. args
# -no-reboot: triple fault exits QEMU instead of rebooting into a confusing loop.
# -D + -d: send QEMU debug (-d) to `target/qemu-debug.log` so `-serial stdio` (stdout) is not
#   interleaved with `cpu_reset` / SMM dumps (no more `EFER=…Hello` on one line).
# Less boot noise: change `-d` to `int,guest_errors` (drop `cpu_reset`) while not chasing triple faults.
run-args = [
    "-serial", "stdio",
    "-vga", "std",
    "-no-reboot",
    "-D",
    "target/qemu-debug.log",
    "-d",
    "int,guest_errors,cpu_reset",
]

[package.metadata.cargo-make]
run = "qemu-system-x86_64 -drive format=raw,file=target/x86_64-unknown-none/debug/bootimage-rockos.bin -serial stdio -vga std -no-reboot -D target/qemu-debug.log -d int,guest_errors,cpu_reset"
